--- a/src/pug/pages/contacts.pug
+++ b/src/pug/pages/contacts.pug
@@ -34,8 +34,8 @@ block content
 							
 							//======contacts =====
 							.contacts-links
-								a(href="tel:+79068660922") +7 906 866 09 22
-								a(href="mailto:3@sbottle.ru") 3@sbottle.ru
+								a(href="tel:88007707419") 8 800 770 74 19
+								a(href="mailto:info@sbottle.ru") info@sbottle.ru
 								address Челябинск, ул.&nbsp;Российская, 161
 
 					
@@ -46,35 +46,35 @@ block content
 							.acordion
 								//=========== single block =============
 								.acor-item
-									input#acor1(type='checkbox' name='acor' checked='checked')
+									input#acor1(type='radio' name='acor' checked='checked')
 									label(for='acor1') 01) Заявка
 									.acor-body
 										p Отправьте заявку любым удобным способом — по номеру 8 800 770-74-19, email, Viber, WhatsApp, Telegram, на наши странички в VK и Instagram, через форму обратной связи и даже через конструктор шейкера. Кстати через конструктор вы можете сразу дать понять менеджеру шейкеры в каких цветах вам больше нравятся.
 
 								//=========== single block =============
 								.acor-item
-									input#acor2(type='checkbox' name='acor')
+									input#acor2(type='radio' name='acor')
 									label(for='acor2') 02) Дизайн макетов
 									.acor-body
 										p Отправьте заявку любым удобным способом — по номеру 8 800 770-74-19, email, Viber, WhatsApp, Telegram, на наши странички в VK и Instagram, через форму обратной связи и даже через конструктор шейкера. Кстати через конструктор вы можете сразу дать понять менеджеру шейкеры в каких цветах вам больше нравятся.
 
 								//=========== single block =============
 								.acor-item
-									input#acor3(type='checkbox' name='acor')
+									input#acor3(type='radio' name='acor')
 									label(for='acor3') 03) Заключение договора и оплата
 									.acor-body
 										p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 								
 								//=========== single block =============
 								.acor-item
-									input#acor4(type='checkbox' name='acor')
+									input#acor4(type='radio' name='acor')
 									label(for='acor4') 04) Производство
 									.acor-body
 										p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 								
 								//=========== single block =============
 								.acor-item
-									input#acor5(type='checkbox' name='acor')
+									input#acor5(type='radio' name='acor')
 									label(for='acor5') 05) Отгрузка и доставка
 									.acor-body
 										p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
