--- a/src/pug/sections/_contacts.pug
+++ b/src/pug/sections/_contacts.pug
@@ -3,36 +3,37 @@ section.contacts#contacts
 	.container
 		.contacts-content
 			.contacts-column
-				h2.title-25.mb-40 Ответим на ваши вопросы
+				h2 Ответим на ваши вопросы
 				.manager-card.d-flex
 					.manager-card__img
 						img.lazy(src="./img/manager1.webp", width="150" alt="img")
 					.manager-card__info
-						p.title-25.mb-15 Анастасия
+						p.title-25 Анастасия
 						
-						.contacts-links.mb-15
+						.contacts-links
 							a(href="tel:+79068660922") +7 906 866 09 22
 							a(href="mailto:3@sbottle.ru") 3@sbottle.ru
 
 						//=====social =======
 						.social-block
-							a(href="#!").icon-vk
-								img(src="./img/social/vk.webp", alt="vk")
-							a(href="#!").icon-inst
-								img(src="./img/social/ins.webp", alt="inst")
 							a(href="#!").icon-tel
 								img(src="./img/social/app.webp", alt="app")
 							a(href="#!").icon-viber
 								img(src="./img/social/viber.webp", alt="viber")
 							a(href="#!").icon-tg
 								img(src="./img/social/tg.webp", alt="tg")
+							a(href="#!").icon-vk
+								img(src="./img/social/vk.webp", alt="vk")
+							a(href="#!").icon-inst
+								img(src="./img/social/ins.webp", alt="inst")
+							
 			
 						//===== кругляшок горит зеленым, если есть класс active  у родителя .online-state
 						.online-state.d-flex-y.active
 							span.online-state__dot
 							span.online-state__text Сейчас онлайн
 			.contacts-form-wrapper
-				h2.title-25.mb-40 Оформим ваш заказ
+				h2 Оформим ваш заказ
 				
 				form.order-form
 					.form-item
