--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -13,7 +13,7 @@
 .form-item{
 	position: relative;
 	display: block;
-	margin-bottom: 20px;
+	margin-bottom: 19px;
 	input, textarea{
 		display: block;
 		padding-left: 12px;
@@ -35,10 +35,10 @@
 		
 	}
 	textarea {
-		border-radius: 20px;
+		border-radius: 10px;
 		border: 1px solid #000;
 		resize: none;
-		padding: 18px;
+		padding: 16px 18px;
 		height: 200px;
 
 		&::placeholder {
@@ -68,12 +68,17 @@
 	display: flex;
 	align-items: center;
 	overflow: hidden;
+	margin-bottom: 50px;
 	.form-label{
 		display: flex;
-		gap: 20px;
+		gap: 57px;
 		align-items: flex-end;
 		cursor: pointer;
 	}
+		.icon-download{
+			position: relative;
+			top:5px;
+		}
 }
  
  .inputfile+label+span {
@@ -84,11 +89,16 @@
  	font-weight: 600;
  }
  .form-notice{
-	gap: 10px;
+	gap: 12px;
 	font-family: var(--fontMedium);
 	align-items: center;
 	font-weight: 500;
-	margin-bottom: 24px;
+	margin-bottom: 47px;
+	margin-top: 520px;
+	white-space: nowrap;
+	@media (max-width: 1023px) {
+		white-space: normal;
+	}
 	@media (max-width: 576px) {
 		flex-direction: column;
 		justify-content: center;
@@ -100,6 +110,16 @@
 	align-items: flex-start;
 	column-gap: 16px;
 	margin-bottom: 25px;
+	input[type="checkbox"]{
+		width: 18px;
+		height: 18px;
+		flex-shrink: 0;
+	}
+	p{
+		@media(min-width:1200px){
+			min-width: 510px;
+		}
+	}
 	a{
 		color: #2899f8;
 		border-bottom: 1px solid #2899f8;
