--- a/src/scss/sections/_contacts.scss
+++ b/src/scss/sections/_contacts.scss
@@ -1,9 +1,13 @@
 .contacts{
 	background-color: #fff;
-	padding: 28px 50px;
-	// .container {
-	// 	width: min(1120px, 100%);
-	// }
+	padding-block: 28px 50px;
+	h2{
+		font-size: 25px;
+		line-height: 1.2;
+		font-family: var(--fontSemi);
+		font-weight: 600;
+		margin-bottom: 23px;
+	}
 	@media (max-width: 1023px) {
 		padding: 30px 20px;
 	}
@@ -19,6 +23,7 @@
 	&-column{
 		width: 430px;
 		flex-shrink: 0;
+		h2{margin-bottom: 45px;}
 		@media (max-width: 1023px) {
 			width: 100%;
 			max-width: 280px;
@@ -26,10 +31,11 @@
 	}
 	&-form-wrapper{
 		flex-grow: 1;
+		form{max-width: 500px;}
 	}
 }
 .manager-card{
-	column-gap:26px;
+	column-gap:32px;
 	font-family: var(--fontMedium);
 	font-weight: 500;
 	&__img{
@@ -52,12 +58,14 @@
 		}
 	}
 	&__info{
-		padding-top: 15px;
+		padding-top: 10px;
+		.title-25{margin-bottom: 10px;}
 		
 	}
 
 	.social-block{
 		gap:11px;
+		margin-top: 18px;
 		&+*{margin-top: 40px;}
 	}
 
