--- a/src/scss/sections/_header-banner.scss
+++ b/src/scss/sections/_header-banner.scss
@@ -17,7 +17,7 @@
 	}
 }
 .header-title{
-	padding-block: 45px 95px;
+	padding-block: 45px 70px;
 	h1{width: min( 720px, 80%);}
 
 	@media (max-width: 767px) {
@@ -32,7 +32,7 @@
 	h2{
 		font-size: 15px;
 		font-family: var(--fontBold);
-		margin-right: 50px;
+		margin-right: 55px;
 		padding-top: 8px;
 		flex-shrink: 0;
 	}
@@ -51,7 +51,7 @@
 	flex-grow: 1;
 	display: grid;
 	grid-template-columns: repeat(4, 200px);
-	gap: 10px;
+	gap: 11px;
 	margin-left: auto;
 	margin-left: auto;
 	@media (max-width: 1119px) {
@@ -63,8 +63,8 @@
 	}
 	
 	&-item{
-		padding: 10px;
-		border-radius: 10px;
+		padding: 7px;
+		border-radius:5px;
 		border: 1px solid #000000;
 		width: 100%;
 		max-width: 500px;
@@ -103,13 +103,16 @@
 		color: white;
 		.arrow-link{
 			color: white;
-			margin-top: 27px;
+			margin-top: 33px;
 			display: inline-block;
 			@media (max-width: 767px) {
 			  margin-top: 10px;
 			}
 		}
 	}
+		.swiper-button-prev{left:18px}.swiper-button-next {
+			right: 18px
+		}
 	&__image{
 		position: absolute;
 		top: 0;
