--- a/src/pug/pages/single-blog.pug
+++ b/src/pug/pages/single-blog.pug
@@ -13,7 +13,7 @@ mixin blog-card(img, title, txt)
 					span  Читать
 					svg.arrow-right
 						use( href='./img/spriteSvg.svg#arrow')
-				span 02 08 2022
+				//- span 02 08 2022
 block content
 	include ../sections/_header.pug
 	main.inner-page
@@ -54,12 +54,12 @@ block content
 				
 				p Мы знаем ответы на эти вопросы и все расскажем вам. Чтобы не быть голословными мы запустили свою линейку шейкеров и тестируем какие цвета и модели шейкеров лучше продаются и как принт влияет на внимание аудитории.
 
-				p
+				p.mb-50
 					img.lazy(src="./img/article-page/logos.webp", width="660" alt="img")
 				
-				p Подскажем какие позиции лучше выбрать для первого заказа, поможем с маркировкой, упакуем в коробки правильного размера и отправим любой транспортной компанией на ваш выбор (или посоветуем какую лучше выбрать) 
+				p.mb-18 Подскажем какие позиции лучше выбрать для первого заказа, поможем с маркировкой, упакуем в коробки правильного размера и отправим любой транспортной компанией на ваш выбор (или посоветуем какую лучше выбрать) 
 
-				p Есть вопросы — напишите нам в любом мессенджере или на почту. Хотите самостоятельно выбрать модель и цвета шейкера — воспользуйтесь нашим онлайн-конструктором. 
+				p.mb-18 Есть вопросы — напишите нам в любом мессенджере или на почту. Хотите самостоятельно выбрать модель и цвета шейкера — воспользуйтесь нашим онлайн-конструктором. 
 
 				p Ваша команда Shaker Bottle.  
 				
@@ -83,10 +83,10 @@ block content
 						.swiper-pagination
 
 				p Подскажем какие позиции лучше выбрать для первого заказа, поможем с маркировкой, упакуем в коробки правильного размера и отправим любой транспортной компанией на ваш выбор (или посоветуем какую лучше выбрать) 
-				hr
-				p #[big Вы не найдете в конструкторе эту модель, она из ограниченной серии, поэтому свяжитесь с нашими менеджерами, они с удовольствием вам помогут подобрать другие сочетания цветов и подготовят макеты с логотипом.]
-				hr
-				p Тогда вы пришли по адресу! Мы запустили производство шейкеров в России в 2016 году, тестируя материалы, #[mark формы и отзывы покупателей, накопили огромный] опыт и сейчас уже знаем чточно, что шейкеры обладают большим потенциалом роста на маркетплейсах и только набирают объемы продаж.
+				.border-block
+					p Вы не найдете в конструкторе эту модель, она из ограниченной серии, поэтому свяжитесь с нашими менеджерами, они с удовольствием вам помогут подобрать другие сочетания цветов и подготовят макеты с логотипом.
+				
+				p.mb-18 Тогда вы пришли по адресу! Мы запустили производство шейкеров в России в 2016 году, тестируя материалы, #[mark формы и отзывы покупателей, накопили огромный] опыт и сейчас уже знаем чточно, что шейкеры обладают большим потенциалом роста на маркетплейсах и только набирают объемы продаж.
 
 				p Тогда вы пришли по адресу! Мы запустили производство шейкеров в России в 2016 году, тестируя материалы, формы и отзывы покупателей, накопили огромный опыт и сейчас уже знаем чточно, что шейкеры обладают большим потенциалом роста на маркетплейсах и только набирают объемы продаж.
 
@@ -106,13 +106,12 @@ block content
 		//============= BLOG CARDS ============
 		.blog-articles--four
 			.blog-articles
-				+blog-card(1, 'Ищете подходящий товар для продаж на wildberries?','Мы уверены что шейкеры вам подойдут')
-				
-				+blog-card(3, 'Работаем в штатом режиме.','Что успели сделать чтобы стабилизировать ситуацию')
-
+				+blog-card(1, 'Работаем в штатом режиме.','Мы уверены что шейкеры вам подойдут')
 				+blog-card(4, '100% оранжевый','Ограниченная серия')
-				
 				+blog-card(2, 'Цвет месяца — PINK','Апрель в розовом цвете. Скидка внутри →')
+
+				
+				+blog-card(5, 'Цвет месяца — LIGHT BLUE TWO','Мы продолжаем традиционную скидку месяца. Подробности внутри →')
 
 
 	include ../sections/_contacts.pug
