--- a/src/scss/pages/_blog-page.scss
+++ b/src/scss/pages/_blog-page.scss
@@ -10,6 +10,7 @@
 			}
 			p{-webkit-line-clamp: 3;}
 		}
+		.title-25{min-height: 34px; margin-bottom: 16px;}
 		&__footer{
 			padding-top: 20px;
 			.btn{height: 37px;}
