--- a/src/pug/sections/_product-parts-sliders.pug
+++ b/src/pug/sections/_product-parts-sliders.pug
@@ -15,10 +15,10 @@ section.product-parts.white-bg.mt-10
 						img.lazy(src="./img/product-page/1.webp" width="386", alt="img")
 				
 				//====slider-navigation ======
-				.swiper-button-next
+				.swiper-button-next.next-small
 					svg
 						use(href="./img/spriteSvg.svg#caret-right")
-				.swiper-button-prev
+				.swiper-button-prev.prev-small
 					svg
 						use(href="./img/spriteSvg.svg#caret-left")
 				.swiper-pagination
@@ -41,10 +41,10 @@ section.product-parts.white-bg.mt-10
 						img.lazy(src="./img/product-page/2.webp" width="386", alt="img")
 				
 				//====slider-navigation ======
-				.swiper-button-next
+				.swiper-button-next.next-small
 					svg
 						use(href="./img/spriteSvg.svg#caret-right")
-				.swiper-button-prev
+				.swiper-button-prev.prev-small
 					svg
 						use(href="./img/spriteSvg.svg#caret-left")
 				.swiper-pagination
@@ -67,10 +67,10 @@ section.product-parts.white-bg.mt-10
 						img.lazy(src="./img/product-page/3.webp" width="386", alt="img")
 				
 				//====slider-navigation ======
-				.swiper-button-next
+				.swiper-button-next.next-small
 					svg
 						use(href="./img/spriteSvg.svg#caret-right")
-				.swiper-button-prev
+				.swiper-button-prev.prev-small
 					svg
 						use(href="./img/spriteSvg.svg#caret-left")
 				.swiper-pagination
@@ -92,10 +92,10 @@ section.product-parts.white-bg.mt-10
 						img.lazy(src="./img/product-page/4.webp" width="386", alt="img")
 				
 				//====slider-navigation ======
-				.swiper-button-next
+				.swiper-button-next.next-small
 					svg
 						use(href="./img/spriteSvg.svg#caret-right")
-				.swiper-button-prev
+				.swiper-button-prev.prev-small
 					svg
 						use(href="./img/spriteSvg.svg#caret-left")
 				.swiper-pagination
