--- a/src/scss/sections/_blog-cards.scss
+++ b/src/scss/sections/_blog-cards.scss
@@ -1,10 +1,10 @@
-.blog{
-	padding-bottom: 40px;
+// .blog{
+// 	padding-bottom: 40px;
 	
-	@media (max-width: 767px) {
-	padding-bottom: 30px;
-	}
-}
+// 	@media (max-width: 767px) {
+// 	padding-bottom: 30px;
+// 	}
+// }
 .blog-cards{
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
