--- a/src/pug/sections/_blog-cards.pug
+++ b/src/pug/sections/_blog-cards.pug
@@ -18,7 +18,7 @@ mixin blog-card(img, title, txt)
 //================= BLOG CARDS ==============
 section.blog
 	.section-title
-		h1.h1 Полезные статьи
+		h2 Полезные статьи
 	.scroll-horizontal
 		.blog-cards
 			+blog-card(1, 'Шейкер + маркетплейс = 💜','Вы находитесь в поисках товара для продажи на маркетплейсах или своем магазине/фитнес-центре? Или вы хотите увеличить популярность своего бренда? Может быть хотите заказать шейкеры со своим логотипом к какой-то торжественной дате?')
