--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -2,14 +2,17 @@
 	padding: 10px;
 	display: grid;
 	grid-template-columns:  1fr 1fr;
-	gap:20px;
+	gap:23px;
 	@media (max-width: 767px) {
 		grid-template-columns: 1fr;
 	}
 }
 .product-page-header .video-preview-item{
-	width: 100%;
+	width: 590px;
 	height: 320px;
+	@media (max-width: 1199px) {
+	width: 100%;
+	}
 	@media (max-width: 767px) {
 		height: auto;
 		aspect-ratio: 59 / 32;
@@ -34,10 +37,10 @@
 	}
 }
 .product-price{
-	column-gap:30px;
+	column-gap:40px;
 	border-radius: 10px;
 	padding: 14px;
-	margin-bottom: 25px;
+	margin-bottom: 21px;
 	@media (max-width: 1023px) {
 		column-gap: 20px;
 		padding: 10px;
@@ -47,7 +50,7 @@
 	  background-color: #fff!important;
 	  margin-bottom: 0;
 	  .price-box-text{
-		padding: 10px;
+		padding: 10px 18px;
 		border-radius: 10px;
 		background-color: var(--accentYellow);
 		margin-bottom: 14px;
@@ -75,6 +78,7 @@
 	li{
 		font-size: 25px;
 		font-family: var(--fontSemi);
+		&::marker{font-size: 30px;}
 		@media (max-width: 1023px) {
 			font-size: 18px;
 		}
@@ -82,7 +86,7 @@
 		   font-size: 25px;
 		}
 	}
-	li +li{margin-top: 20px;}
+	li +li{margin-top: 12px;}
 	@media (max-width: 767px) {
 	 margin-bottom: 15px;
 	}
