--- a/src/scss/sections/_benefits.scss
+++ b/src/scss/sections/_benefits.scss
@@ -3,6 +3,7 @@
 	display: flex;
 	align-items: center;
 	.container{
+		width: min(1090px, 100%);
 		@media (max-width: 1199px) {
 		padding-inline:0;
 		}
@@ -12,11 +13,14 @@
 	}
 	&-wrapper{
 		display: flex;
-		justify-content: center;
+		justify-content: space-between;
 		column-gap: 10px;
 		row-gap:10px;
 		flex-wrap:wrap;
 		text-align: center;
+		@media (max-width: 1199px) {
+		  justify-content: center;
+		}
 	}
 	.benefit-item{
 		text-align: center;
