--- a/src/scss/sections/_print.scss
+++ b/src/scss/sections/_print.scss
@@ -5,7 +5,7 @@
 	border-radius: 10px;
 	
 	justify-content: flex-end;
-	padding: 30px;
+	padding: 25px 30px;
 	@media (max-width: 576px) {
 		padding: 10px;
 		padding-top: 180px;
@@ -28,11 +28,11 @@
 		img{
 			width: 100%;
 			min-height:100%;
-			transform: scale(1.3);
-			object-position: -170px;
+			transform: scale(1.5);
+			object-position: -129px 12px;
 			@media (max-width: 767px) {
 			  object-position: 0;
-			  transform: scale(1.5);
+			  
 			}
 		}
 	}
@@ -41,11 +41,10 @@
 	width: min(530px, 70%);
 	position: relative;
 	z-index: 3;
-	
 	border-radius: 10px;
-	padding: 30px;
-	.title-25{margin-bottom: 20px;}
-	p{margin-bottom: 20px;}
+	padding: 18px 84px 30px 30px;
+	.title-25{margin-bottom: 25px;}
+	p{margin-bottom: 30px;}
 	@media (max-width: 1023px) {
 		padding: 20px;
 	}
