--- a/src/scss/sections/_product-parts-sliders.scss
+++ b/src/scss/sections/_product-parts-sliders.scss
@@ -1,5 +1,6 @@
 .product-parts{
 	padding: 10px;
+	padding-bottom: 30px;
 	@media (max-width: 767px) {
 	background-color: transparent;
 	padding: 0;
@@ -33,12 +34,7 @@
 	}
 	@media (max-width: 1199px) {
 		width: 29vw;
-	.swiper-button-next, .swiper-button-prev{
-		width: 30px; height: 30px;
-		svg{
-			transform: scale(.75);
-		}
-	}
+	
 	}
 	@media (max-width: 991px) {
 		width: 28vw;
@@ -61,6 +57,6 @@
 	}
 }
 .product-parts__description{
-	padding: 10px;
-	.title-25{margin-bottom: 15px;}
+	padding: 3px 10px;
+	.title-25{margin-bottom: 6px; font-family: var(--fontBold);}
 }
