--- a/src/scss/sections/_steps.scss
+++ b/src/scss/sections/_steps.scss
@@ -77,8 +77,9 @@
 		height: 100%;
 		object-fit:contain;
 	}
-	.model-body, .model-cap, .model-snap{
-		z-index: 0;
+	.model-body{z-index: 0;} .model-cap, .model-snap,
+	.model-loop{
+		z-index: 1;
 	}
 	@media (max-width: 1023px) {
 		width: 210px;
