--- a/src/pug/sections/_constructor-copy.pug
+++ b/src/pug/sections/_constructor-copy.pug
@@ -71,7 +71,7 @@ section.constructor.constructor--copy.white-bg.mt-20
 				p.current-model-name С01 <br>600 мл
 			
 			//======= Right COLUMN ======
-			.constructor-descriptiont
+			.constructor-descriptiont-wrapper
 				//====== PART ITEMS ===============
 				.model-parts.adds
 					//======== single item =======
@@ -98,40 +98,41 @@ section.constructor.constructor--copy.white-bg.mt-20
 						button.btn-slim Печать на стакане
 				
 				//==========COLOR PALETTE =======
-				.colors-palette-block
-					//======== Выбранные цвета =====
-					p.txt-bold#output-color
-						span.color-first Белый
-						span -
-						span.color-second Белый
-					
-					//======== Палитра цветов =====
-					.scroll-horizontal
-						.colors-palette
-							+model-color('white', 'white', 'chkd')(class="model-color--current")
-							+model-color('#f6e13c', 'white')
-							+model-color('#f99827', 'white')
-							+model-color('#e4476a', 'white')
-							+model-color('#79cb37', 'white')
-							+model-color('#78b1e0', '#78b1e0')
-							+model-color('#fec83c', '#f6e13c')
-							+model-color('#000000', '#f6e13c')
-							+model-color('#79cb37', '#79cb37')
-							+model-color('#ea2128', '#ea2128')
-							+model-color('#653797', '#653797')
-							+model-color('#ffffff', '#000000')
-							+model-color('#78b1e0', '#000000')
-							+model-color('#f6e13c', '#000000')
-							+model-color('#f99827', '#000000')
-							+model-color('#f6e13c', 'white')
-							+model-color('#f99827', 'white')
-							+model-color('#e4476a', 'white')
-							+model-color('#79cb37', 'white')
-							+model-color('#78b1e0', '#78b1e0')
-							+model-color('#fec83c', '#f6e13c')
-							+model-color('#000000', '#f6e13c')
-							+model-color('#79cb37', '#79cb37')
-							+model-color('#ea2128', '#ea2128')
+				.colors-palette-block.constructor-descriptiont
+					.colors-palette-absolute#c_caps
+						//======== Выбранные цвета =====
+						p.txt-bold#output-color
+							span.color-first Белый
+							span -
+							span.color-second Белый
+						
+						//======== Палитра цветов =====
+						.scroll-horizontal
+							.colors-palette
+								+model-color('white', 'white', 'chkd')(class="model-color--current")
+								+model-color('#f6e13c', 'white')
+								+model-color('#f99827', 'white')
+								+model-color('#e4476a', 'white')
+								+model-color('#79cb37', 'white')
+								+model-color('#78b1e0', '#78b1e0')
+								+model-color('#fec83c', '#f6e13c')
+								+model-color('#000000', '#f6e13c')
+								+model-color('#79cb37', '#79cb37')
+								+model-color('#ea2128', '#ea2128')
+								+model-color('#653797', '#653797')
+								+model-color('#ffffff', '#000000')
+								+model-color('#78b1e0', '#000000')
+								+model-color('#f6e13c', '#000000')
+								+model-color('#f99827', '#000000')
+								+model-color('#f6e13c', 'white')
+								+model-color('#f99827', 'white')
+								+model-color('#e4476a', 'white')
+								+model-color('#79cb37', 'white')
+								+model-color('#78b1e0', '#78b1e0')
+								+model-color('#fec83c', '#f6e13c')
+								+model-color('#000000', '#f6e13c')
+								+model-color('#79cb37', '#79cb37')
+								+model-color('#ea2128', '#ea2128')
 
 	
 			//====== buttons block =======
