--- a/src/pug/sections/_constructor-copy.pug
+++ b/src/pug/sections/_constructor-copy.pug
@@ -68,7 +68,8 @@ section.constructor.constructor--copy.white-bg.mt-20
 					//- img#constructor_colors_loop.imgs_replace.model-loop.lazy(src="./img/c01/C03_loop_white_white_new_02.png", alt="loop")
 				
 				//======= current model name (visible in mob version) =====
-				p.current-model-name С01 <br>600 мл
+				.code
+					span.current-model-name С01 <br>600 мл
 			
 			//======= Right COLUMN ======
 			.constructor-descriptiont-wrapper
@@ -99,7 +100,8 @@ section.constructor.constructor--copy.white-bg.mt-20
 				
 				//==========COLOR PALETTE =======
 				.colors-palette-block.constructor-descriptiont
-					.colors-palette-absolute#c_caps
+					
+					.constructor-description-absolute.active#c_caps
 						//======== Выбранные цвета =====
 						p.txt-bold#output-color
 							span.color-first Белый
