--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -3,16 +3,16 @@ extends ../layouts/layout.pug
 block content
 	include ../sections/_header.pug
 	main.page-main
-		//- include ../sections/_header-banner.pug
-		include ../sections/_constructor-main-page.pug
+		include ../sections/_header-banner.pug
+		//- include ../sections/_constructor-main-page.pug
 		include ../sections/_constructor-copy.pug
 
-	//- 	include ../sections/_video-preview.pug
-	//- 	include ../sections/_review.pug
-	//- 	include ../sections/_portfolio.pug
-	//- 	include ../sections/_blog-cards.pug
-	//- include ../sections/_contacts.pug
-	//- include ../sections/_footer.pug
+		include ../sections/_video-preview.pug
+		include ../sections/_review.pug
+		include ../sections/_portfolio.pug
+		include ../sections/_blog-cards.pug
+	include ../sections/_contacts.pug
+	include ../sections/_footer.pug
 
 
 
