--- a/src/pug/sections/_constructor-copy.pug
+++ b/src/pug/sections/_constructor-copy.pug
@@ -1,5 +1,5 @@
 mixin model-card(title, imgSrc, imgW, chkd)
-	label.model-card-label.special-label
+	label.model-card-label.special-label(data-item="62")
 		if chkd
 			input(type="radio" name="shaker-model" checked)
 		else
