--- a/src/pug/sections/_constructor-copy.pug
+++ b/src/pug/sections/_constructor-copy.pug
@@ -23,7 +23,7 @@ mixin model-color(bgColor, svgColor, chkd)
 			svg
 				use(href="./img/spriteSvg.svg#color-part")
 //============= Consructor steps =============
-section.constructor.constructor--copy.white-bg.mt-20
+section.constructor.white-bg
 	.container
 		//====== SECTION TITLE =======
 		.constructor-header.d-flex-y
