--- a/src/pug/pages/product-page.pug
+++ b/src/pug/pages/product-page.pug
@@ -2,7 +2,7 @@ extends ../layouts/layout.pug
 
 block content
 	include ../sections/_header.pug
-	main.inner-page
+	main.inner-page.inner-page--product
 		//======= breadcrumbs =======
 		.breadcrumbs
 			ul
