--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -1,3 +1,7 @@
+.inner-page.inner-page--product{
+	padding-bottom: 20px;
+	.constructor{margin-top: 10px;}
+}
 .product-page-header{
 	padding: 10px;
 	display: grid;
