--- a/src/pug/sections/_video-preview.pug
+++ b/src/pug/sections/_video-preview.pug
@@ -1,5 +1,5 @@
 //================  video preview ==============
-section.video-preview.mt-30
+section.video-preview
 	
 	.video-preview-wrapper
 		//===== video item =====
