--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -74,11 +74,17 @@
 		gap: 57px;
 		align-items: flex-end;
 		cursor: pointer;
-	}
-		.icon-download{
-			position: relative;
-			top:5px;
+		@media (max-width: 767px) {
+		justify-content: space-between;
 		}
+	}
+	.icon-download{
+		position: relative;
+		top:5px;
+	}
+	@media (max-width: 767px) {
+	margin-bottom: 28px;
+	}
 }
  
  .inputfile+label+span {
@@ -87,6 +93,9 @@
  	padding: 10px 0 0 15px;
  	display: inline-block;
  	font-weight: 600;
+	@media (max-width: 767px) {
+	display: none!important;
+	}
  }
  .form-notice{
 	gap: 12px;
@@ -103,6 +112,11 @@
 		flex-direction: column;
 		justify-content: center;
 		text-align: center;
+		margin-top: 30px;
+		padding-left: 40px;
+		padding-right: 40px;
+		gap:20px;
+		margin-bottom: 26px;
 	}
  }
  .form-confirm{
@@ -125,9 +139,12 @@
 		border-bottom: 1px solid #2899f8;
 		display: inline;
 	}
+	@media (max-width: 767px) {
+	margin-bottom: 40px;
+	}
  }
  .form-submit {
 	@media (max-width: 576px) {
-		.btn{width: 100%;}
+		.btn{width: 100%; max-width: 275px; margin: 0 auto;}
 	}
  }
