--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -92,10 +92,14 @@
 	}
 	@media (max-width: 767px) {
 	    text-align: center;
+		padding-top: 16px;
 		.logo,
 		&-menu a{
 				margin: 0 auto;
 			}
+		.logo span{margin-top: 7px;}
+				.logo{padding-left: 40px;
+				padding-right: 40px;}
 	}
 
 }
