--- a/src/scss/sections/_header-banner.scss
+++ b/src/scss/sections/_header-banner.scss
@@ -15,6 +15,11 @@
 		.header-slider-wrapper{order: 1;}
 		.swiper-slide .container{padding-inline: 20px;}
 	}
+	@media (max-width: 767px) {
+		.header-title {
+			padding-block: 5px;
+		}
+	}
 }
 .header-title{
 	padding-block: 45px 70px;
@@ -45,6 +50,9 @@
 			padding-top: 0;
 			margin-bottom: 15px;
 		}
+	}
+	@media (max-width: 767px) {
+	padding-block: 15px;
 	}
 }
 .shaker-models__type{
