--- a/src/scss/sections/_video-preview.scss
+++ b/src/scss/sections/_video-preview.scss
@@ -1,4 +1,9 @@
-
+.video-preview{
+	margin-top: 30px;
+	@media (max-width: 767px) {
+	margin-top: 60px;
+	}
+}
 .video-preview-wrapper{
 	display: grid;
 	grid-template-columns: 1fr 1fr;
