--- a/src/scss/blocks/_breadcrumbs.scss
+++ b/src/scss/blocks/_breadcrumbs.scss
@@ -21,13 +21,13 @@
 			}
 		}
 		@media (max-width: 767px) {
-		flex-wrap:wrap; row-gap:5px;
+		display: none;
 		}
 	}
 }
 .breadcrumbs + *{
 	padding-top: 40px;
 	@media (max-width: 767px) {
-	padding-top: 30px;
+	padding-top: 0;
 	}
 }
