--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -1,6 +1,9 @@
 .inner-page.inner-page--product{
 	padding-bottom: 20px;
 	.constructor{margin-top: 10px;}
+	@media (max-width: 767px) {
+	padding-bottom: 30px;
+	}
 }
 .product-page-header{
 	padding: 10px;
@@ -9,6 +12,7 @@
 	gap:23px;
 	@media (max-width: 767px) {
 		grid-template-columns: 1fr;
+		gap:12px;
 	}
 }
 .product-page-header .video-preview-item{
@@ -54,10 +58,11 @@
 	  background-color: #fff!important;
 	  margin-bottom: 0;
 	  .price-box-text{
-		padding: 10px 18px;
+		padding: 12px;
+		padding-bottom: 20px;
 		border-radius: 10px;
 		background-color: var(--accentYellow);
-		margin-bottom: 14px;
+		margin-bottom: 22px;
 	  }
 	}
 }
