--- a/src/scss/sections/_print.scss
+++ b/src/scss/sections/_print.scss
@@ -48,6 +48,11 @@
 	@media (max-width: 1023px) {
 		padding: 20px;
 	}
+	@media (max-width: 767px) {
+	.title-25 {
+			margin-bottom: 19px;
+		}
+	}
 	@media (max-width: 576px) {
 		padding: 20px;
 		width: 100%;
