--- a/src/scss/sections/_review.scss
+++ b/src/scss/sections/_review.scss
@@ -28,7 +28,7 @@
 	}
 	@media (max-width: 767px) {
 		flex-direction: column;
-		gap:20px;
+		gap:14px;
 		&__img {
 			width: 150px;
 			height: 150px;
@@ -54,11 +54,19 @@
 		@media (max-width: 1199px) {
 			padding-top: 0;
 		}
+		@media (max-width: 767px) {
+		.txt-bold {
+				margin-bottom: 3px;
+			}
+		}
 	}
 	.review-card__desk{
 		margin-top: 40px;
 		@media (max-width: 1199px) {
 			margin-top:16px;
+		}
+		@media (max-width: 767px) {
+		margin-top: 23px;
 		}
 		
 	}
