--- a/src/pug/pages/single-blog.pug
+++ b/src/pug/pages/single-blog.pug
@@ -16,7 +16,7 @@ mixin blog-card(img, title, txt)
 				//- span 02 08 2022
 block content
 	include ../sections/_header.pug
-	main.inner-page
+	main.inner-page.inner-page--article
 		//======= breadcrumbs =======
 		.breadcrumbs
 			ul
@@ -53,9 +53,8 @@ block content
 					li как не допустить провала в продажах и как часто нужно делать заказ продукции у поставщика?
 				
 				p Мы знаем ответы на эти вопросы и все расскажем вам. Чтобы не быть голословными мы запустили свою линейку шейкеров и тестируем какие цвета и модели шейкеров лучше продаются и как принт влияет на внимание аудитории.
-
-				p.mb-50
-					img.lazy(src="./img/article-page/logos.webp", width="660" alt="img")
+				
+				img.mb-50.lazy(src="./img/article-page/logos.webp", width="660" alt="img")
 				
 				p.mb-18 Подскажем какие позиции лучше выбрать для первого заказа, поможем с маркировкой, упакуем в коробки правильного размера и отправим любой транспортной компанией на ваш выбор (или посоветуем какую лучше выбрать) 
 
