--- a/src/pug/pages/blog.pug
+++ b/src/pug/pages/blog.pug
@@ -18,7 +18,7 @@ mixin blog-card(img, title, txt)
 block content
 	include ../sections/_header.pug
 	
-	main.inner-page
+	main.inner-page.inner-page--blog
 		//======= breadcrumbs =======
 		.breadcrumbs
 			ul
