--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -123,10 +123,16 @@ select:-webkit-autofill:focus {
 .inner-page{
   padding-top: 20px;
   padding-bottom: 50px;
+  @media (max-width: 767px) {
+    padding-bottom: 26px;
+  }
   h1{
     margin-bottom: 38px;
     @media (max-width: 767px) {
-    margin-bottom:30px;padding-top:12px; padding-bottom: 26px;
+    margin-bottom:0;
+    padding-top:12px; 
+    padding-bottom: 26px;
+    padding-left:10px;
     }
   }
 }
