--- a/src/scss/pages/_blog-page.scss
+++ b/src/scss/pages/_blog-page.scss
@@ -1,3 +1,9 @@
+.inner-page.inner-page--blog{
+	@media (max-width: 767px) {
+	padding-top: 16px;
+	h1{padding-bottom: 19px;}
+	}
+}
 .blog-articles{
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
