--- a/src/scss/pages/_contacts.scss
+++ b/src/scss/pages/_contacts.scss
@@ -7,6 +7,8 @@
 	gap: 15px;
 	h2{line-height: 1; margin-top: -12px;}
 	@media (max-width: 767px) {
+		h2 {margin-top: 0;}
+				
 	gap: 10px;
 	}
 	.contacts-block{
