--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -3,6 +3,7 @@
 	.constructor{margin-top: 10px;}
 	@media (max-width: 767px) {
 	padding-bottom: 30px;
+	.constructor{display: none;}
 	}
 }
 .product-page-header{
@@ -56,9 +57,10 @@
 	@media (max-width: 767px) {
 	  flex-direction: column-reverse;
 	  background-color: #fff!important;
+	  margin-inline: -10px;
 	  margin-bottom: 0;
 	  .price-box-text{
-		padding: 12px;
+		padding: 11px;
 		padding-bottom: 20px;
 		border-radius: 10px;
 		background-color: var(--accentYellow);
@@ -76,6 +78,7 @@
 	@media (max-width: 767px) {
 		flex-direction: column-reverse;
 		font-size: 40px;
+		padding-inline: 10px;
 	}
 }
 .product-info-list {
@@ -110,10 +113,11 @@
 	gap:5px;
 	max-width: 300px;
 	text-align: left;
-	margin-bottom: 25px;
+	margin-bottom: 18px;
+	
 	span{
-		flex-grow: 1;
-		font-size: 16px;
+		flex-grow: 1;font-size: 18px;
+		
 	}
 	@media (max-width: 1023px) {
 		display: flex;
