--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,7 @@
 @import "sections/blog-cards";
 @import "sections/contacts";
 @import "sections/footer";
+@import "blocks/video-modal";
 
 
 @import "pages/blog-page";
