--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -14,8 +14,22 @@ block content
 	include ../sections/_contacts.pug
 	include ../sections/_footer.pug
 
+	//===================VIDEO MODAL ==============
+	.modal-frame(data-modal="video1")
+		.modal-frame__content
+			//=======close btn ======
+			button.btn-close +
+			
+			.video
+				iframe(width="100%", height="100%", src="https://www.youtube.com/embed/9YpM5vwYMyU?si=iCuuVvf5FQhhRJll", title="YouTube video player", frameborder="0", allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share", referrerpolicy="strict-origin-when-cross-origin", allowfullscreen)
 
-
+	.modal-frame(data-modal="video2")
+		.modal-frame__content
+			//=======close btn ==========
+			button.btn-close +
+			
+			.video
+				iframe(width="100%", height="100%", src="https://www.youtube.com/embed/9YpM5vwYMyU?si=iCuuVvf5FQhhRJll", title="YouTube video player", frameborder="0", allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share", referrerpolicy="strict-origin-when-cross-origin", allowfullscreen)
 
 	
 block variables
