--- a/src/pug/sections/_video-preview.pug
+++ b/src/pug/sections/_video-preview.pug
@@ -3,25 +3,19 @@ section.video-preview
 	
 	.video-preview-wrapper
 		//===== video item =====
-		.video-preview-item
+		.video-preview-item(data-video-btn="video1")
 			//===== play btm =====
 			button.play-icon
 				svg.svg-play
 					use(href="./img/spriteSvg.svg#svg-play")
 			.video-poster
 				img.lazy(src="./img/video-posters/poster1.webp", alt="poster")
-			//====video =======
-			video(width="100%", height="100%" )
-				source(src="video/video.mp4" type="video/mp4" )
-		
+			
 		//===== video item =====
-		.video-preview-item
+		.video-preview-item(data-video-btn="video2")
 			//===== play btm =====
 			button.play-icon
 				svg.svg-play
 					use(href="./img/spriteSvg.svg#svg-play")
 			.video-poster
 				img.lazy(src="./img/video-posters/poster2.webp", alt="poster")
-			//====video =======
-			video(src="video/video.mp4", width="100%", height="100%", )
-				source(src="video.mp4" type="video/mp4")
