--- a/src/scss/sections/_video-preview.scss
+++ b/src/scss/sections/_video-preview.scss
@@ -17,7 +17,7 @@
 	
 	overflow: hidden;
 	position: relative;
-	// height: 330px;
+	cursor:pointer;
 	aspect-ratio: 59 / 33;
 	.play-icon{
 		position: absolute;
