--- a/src/pug/pages/product-page.pug
+++ b/src/pug/pages/product-page.pug
@@ -24,16 +24,14 @@ block content
 			//======= header banner ======
 			.product-page-header.white-bg
 				//===== video box ========
-				.video-preview-item
+				.video-preview-item(data-video-btn="video1")
 					//===== play btm =====
 					button.play-icon
 						svg.svg-play
 							use(href="./img/spriteSvg.svg#svg-play")
 					.video-poster
 						img.lazy(src="./img/product-page/product-poster.webp", alt="poster")
-					//====video =======
-					video(width="100%", height="100%"  )
-						source(src="video/video.mp4" type="video/mp4" )
+					
 				
 				//==== price-box =====
 				.product-page-header__info
@@ -56,6 +54,13 @@ block content
 		include ../sections/_blog-cards.pug
 	include ../sections/_contacts.pug
 	include ../sections/_footer.pug
-	
+	//===================VIDEO MODAL ==============
+	.modal-frame(data-modal="video1")
+		.modal-frame__content
+			//=======close btn ======
+			button.btn-close +
+			.video
+				iframe(width="100%", height="100%", src="https://www.youtube.com/embed/9YpM5vwYMyU?si=iCuuVvf5FQhhRJll", title="YouTube video player", frameborder="0", allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share", referrerpolicy="strict-origin-when-cross-origin", allowfullscreen)
+				
 block variables
 	-var title = "Shaker";
